Fix layout problems

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -56,7 +56,7 @@ body {
   height:185px;
   background-color: black;
   width: 100%;
-  margin-top: 10%;
+  margin-top: 100%;
   color:white;
   align-content: stretch;
   font-weight: bolder;
@@ -124,7 +124,6 @@ body {
   height:500px;
   color: black;
   text-shadow:  -1px 0 #996515, 0 1px #996515, 1px 0 #996515, 0 -1px #996515;
-
 }
 
 .bio{
@@ -225,7 +224,7 @@ body {
     min-height: 100vh;
     overflow:hidden;
     margin-top:1px;
-    min-width: 100vw;
+    min-width: 75vh;
 
   .webProjects{
     background-size:cover;
@@ -241,7 +240,7 @@ body {
         justify-content: center;
         align-items: center;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
   }
 
@@ -309,7 +308,15 @@ body {
   }
 }
 
-.workinprogress{
-  background-size: cover;
-  background-position: center;
+.hero3{
+  display:flex;
+  justify-content: center;
+  position:absolute;
+  background: grey;
+  font-family:Fancy;
+  background-size:cover;
+  width:100%;
+  height:500px;
+  color: black;
+  text-shadow:  -1px 0 #996515, 0 1px #996515, 1px 0 #996515, 0 -1px #996515;
 }
